version select overlap issue resolved

--- a/docs/src/components/Shell/Navbar/Navbar.module.css
+++ b/docs/src/components/Shell/Navbar/Navbar.module.css
@@ -4,7 +4,7 @@
   top: var(--docs-header-height);
   bottom: 0;
   left: 0;
-  z-index: 100;
+  z-index: 1;
   width: var(--docs-navbar-width);
   display: flex;
   flex-direction: column;
